# minire

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: examples-kit.cmake
examples/: CMakeLists.txt
examples/bouncing-sprite/: CMakeLists.txt  bouncing-sprite.cpp
examples/gl-application/: CMakeLists.txt  gl-application.cpp
examples/gltf-viewer/: CMakeLists.txt  gltf-viewer.cpp
examples/gltf-viewer/assets/: README.md
examples/hello-world/: CMakeLists.txt  hello-world.cpp
examples/rotating-cube/: CMakeLists.txt  cube.gltf  rotating-cube.cpp
